fin dimplementation de pouvoir

--- a/src/app/pages/magiciens/template/magicien-info.component.html
+++ b/src/app/pages/magiciens/template/magicien-info.component.html
@@ -1,6 +1,6 @@
 
-<li class="list-group-item">{{magicien.name}}</li>
-<li class="list-group-item">{{magicien.numberOfPowers}}</li>
+<li class="list-group-item">Nom: {{magicien.name}}</li>
+<li class="list-group-item">Nombre de pouvoirs: {{magicien.numberOfPowers}}</li>
 <li class="list-group-item d-flex gap-5">
   <button href="" class="bg-secondary text-white nav-link px-2 py-1 rounded-1" (click)="readMagicien(magicien)">afficher Plus</button>
   <button href="" class="bg-warning text-white nav-link px-2 py-1 rounded-1" (click)="updateMagicien(magicien)">modifier</button>
