--- a/src/app/pages/ui/uibuttonblock/uibuttonblock.component.html
+++ b/src/app/pages/ui/uibuttonblock/uibuttonblock.component.html
@@ -1,5 +1,6 @@
 <li class="list-group-item d-flex justify-content-center gap-3 w-100">
-  <i class="bi bi-eye text-success" (click)="readPouvoir(pouvoir)"></i>
-  <i class="bi bi-pencil-square text-warning" (click)="updatePouvoir(pouvoir)"></i>
-  <i class="bi bi-trash3-fill text-danger" (click)="deletePouvoir(pouvoir)"></i>
+  <i class="bi bi-plus-circle text-success" (click)="createData(object)"></i>
+  <i class="bi bi-eye text-primary-emphasis" (click)="readData(object)"></i>
+  <i class="bi bi-pencil-square text-warning" (click)="updateData(object)"></i>
+  <i class="bi bi-trash3-fill text-danger" (click)="deleteData(object)"></i>
 </li>
